max-width 360px

--- a/footer.html
+++ b/footer.html
@@ -34,6 +34,6 @@
 <div class="footer__bottom">
     <p class="footer__copyright">
         © 2024 Альфа маркетинг<br><br>
-        <a href="/privacy-policy.php">Политика конфиденциальности</a>
+        <a>Политика конфиденциальности</a>
     </p>
 </div>
